src/objects/IECAddress__c.object
<CustomObject>
    <description>Object containing addresses</description>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <default>true</default>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IECAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>IEC - Concatenation of all address information that will be used for auto complete</description>
        <externalId>true</externalId>
        <label>Full Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEC_Migration_Key__c</fullName>
        <description>IEC - temporary field for data migration - to delete when complete</description>
        <externalId>true</externalId>
        <label>IEC_Migration_Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IEC_Zip_Postal_Code_required__c</fullName>
        <description>IEC - Determine if postal code is required during address entry via customer dashboard</description>
        <formula>ISO_Country__r.IEC_Zip_Postal_Code_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IEC Zip/Postal Code required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO_Country_Code__c</fullName>
        <description>IEC - ISO Country Code</description>
        <formula>ISO_Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country_Name__c</fullName>
        <description>IEC - ISO Country Name</description>
        <formula>ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>IEC - ISO Country</description>
        <label>ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>IEC Addresses</relationshipLabel>
        <relationshipName>IEC_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISO_State_Code_SAP__c</fullName>
        <description>IEC - ISO State Code without country code</description>
        <formula>IF(OR(ISBLANK(ISO_Country_Code__c), ISBLANK(ISO_State__r.ISO_Code__c)), &quot;&quot;, IF(LEFT(ISO_State__r.ISO_Code__c, 3) = ISO_Country_Code__c &amp; &quot;-&quot;, MID(ISO_State__r.ISO_Code__c, 4, 3), ISO_State__r.ISO_Code__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Code SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State_Code__c</fullName>
        <description>IEC - ISO State Code with or without country code</description>
        <formula>ISO_State__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State_Name__c</fullName>
        <description>IEC - ISO State Name</description>
        <formula>ISO_State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>IEC - ISO State</description>
        <label>ISO State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IATA_ISO_State__c.IATA_ISO_Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.ISO_Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>IEC Addresses</relationshipLabel>
        <relationshipName>IEC_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>IEC Address</label>
    <nameField>
        <displayFormat>A{0}</displayFormat>
        <label>IECAddress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Change_On_ISO_Country</fullName>
        <active>true</active>
        <description>SAP does not accept change on country because it links to taxation</description>
        <errorConditionFormula>AND(NOT(ISNEW())
  , ISCHANGED(ISO_Country__c)
)</errorConditionFormula>
        <errorDisplayField>ISO_Country__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Change_On_ISO_State</fullName>
        <active>true</active>
        <description>SAP does not accept change on state because it links to taxation</description>
        <errorConditionFormula>AND(NOT(ISNEW())
  , ISCHANGED(ISO_State__c)
)</errorConditionFormula>
        <errorDisplayField>ISO_State__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
</CustomObject>